
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int OMX_U32 ;


 int MMAL_BUFFER_HEADER_FLAGS_SNAPSHOT ;
 int MMAL_BUFFER_HEADER_FLAG_CODECSIDEINFO ;
 int MMAL_BUFFER_HEADER_FLAG_CONFIG ;
 int MMAL_BUFFER_HEADER_FLAG_CORRUPTED ;
 int MMAL_BUFFER_HEADER_FLAG_DECODEONLY ;
 int MMAL_BUFFER_HEADER_FLAG_DISCONTINUITY ;
 int MMAL_BUFFER_HEADER_FLAG_EOS ;
 int MMAL_BUFFER_HEADER_FLAG_FRAME_END ;
 int MMAL_BUFFER_HEADER_FLAG_KEYFRAME ;
 int MMAL_BUFFER_HEADER_FLAG_NAL_END ;
 int MMAL_BUFFER_HEADER_FLAG_USER0 ;
 int MMAL_BUFFER_HEADER_FLAG_USER1 ;
 int MMAL_BUFFER_HEADER_FLAG_USER2 ;
 int MMAL_BUFFER_HEADER_FLAG_USER3 ;
 int MMAL_BUFFER_HEADER_VIDEO_FLAG_INTERLACED ;
 int MMAL_BUFFER_HEADER_VIDEO_FLAG_TOP_FIELD_FIRST ;
 int OMX_BUFFERFLAG_CAPTURE_PREVIEW ;
 int OMX_BUFFERFLAG_CODECCONFIG ;
 int OMX_BUFFERFLAG_CODECSIDEINFO ;
 int OMX_BUFFERFLAG_DATACORRUPT ;
 int OMX_BUFFERFLAG_DECODEONLY ;
 int OMX_BUFFERFLAG_DISCONTINUITY ;
 int OMX_BUFFERFLAG_ENDOFFRAME ;
 int OMX_BUFFERFLAG_ENDOFNAL ;
 int OMX_BUFFERFLAG_EOS ;
 int OMX_BUFFERFLAG_INTERLACED ;
 int OMX_BUFFERFLAG_SYNCFRAME ;
 int OMX_BUFFERFLAG_TOP_FIELD_FIRST ;
 int OMX_BUFFERFLAG_USR0 ;
 int OMX_BUFFERFLAG_USR1 ;
 int OMX_BUFFERFLAG_USR2 ;
 int OMX_BUFFERFLAG_USR3 ;

OMX_U32 mmalil_buffer_flags_to_omx(uint32_t flags)
{
   OMX_U32 omx_flags = 0;

   if(flags & MMAL_BUFFER_HEADER_FLAG_KEYFRAME)
      omx_flags |= OMX_BUFFERFLAG_SYNCFRAME;
   if(flags & MMAL_BUFFER_HEADER_FLAG_FRAME_END)
      omx_flags |= OMX_BUFFERFLAG_ENDOFFRAME;
   if(flags & MMAL_BUFFER_HEADER_FLAG_EOS)
      omx_flags |= OMX_BUFFERFLAG_EOS;
   if(flags & MMAL_BUFFER_HEADER_FLAG_CONFIG)
      omx_flags |= OMX_BUFFERFLAG_CODECCONFIG;
   if(flags & MMAL_BUFFER_HEADER_FLAG_DISCONTINUITY)
      omx_flags |= OMX_BUFFERFLAG_DISCONTINUITY;
   if (flags & MMAL_BUFFER_HEADER_FLAG_CODECSIDEINFO)
      omx_flags |= OMX_BUFFERFLAG_CODECSIDEINFO;
   if (flags & MMAL_BUFFER_HEADER_FLAGS_SNAPSHOT)
      omx_flags |= OMX_BUFFERFLAG_CAPTURE_PREVIEW;
   if (flags & MMAL_BUFFER_HEADER_FLAG_CORRUPTED)
      omx_flags |= OMX_BUFFERFLAG_DATACORRUPT;
   if (flags & MMAL_BUFFER_HEADER_FLAG_DECODEONLY)
      omx_flags |= OMX_BUFFERFLAG_DECODEONLY;
   if (flags & MMAL_BUFFER_HEADER_VIDEO_FLAG_INTERLACED)
      omx_flags |= OMX_BUFFERFLAG_INTERLACED;
   if (flags & MMAL_BUFFER_HEADER_VIDEO_FLAG_TOP_FIELD_FIRST)
     omx_flags |= OMX_BUFFERFLAG_TOP_FIELD_FIRST;
   if (flags & MMAL_BUFFER_HEADER_FLAG_NAL_END)
     omx_flags |= OMX_BUFFERFLAG_ENDOFNAL;

   if (flags & MMAL_BUFFER_HEADER_FLAG_USER0)
      omx_flags |= OMX_BUFFERFLAG_USR0;
   if (flags & MMAL_BUFFER_HEADER_FLAG_USER1)
      omx_flags |= OMX_BUFFERFLAG_USR1;
   if (flags & MMAL_BUFFER_HEADER_FLAG_USER2)
      omx_flags |= OMX_BUFFERFLAG_USR2;
   if (flags & MMAL_BUFFER_HEADER_FLAG_USER3)
      omx_flags |= OMX_BUFFERFLAG_USR3;

   return omx_flags;
}
